[gd_scene load_steps=10 format=3 uid="uid://menunew123"]

[ext_resource type="Script" path="res://TitleScreen/menu.gd" id="1_menu"]
[ext_resource type="FontFile" uid="uid://cb4e8g30xxp5u" path="res://Font/tenderness.otf" id="1_font"]
[ext_resource type="PackedScene" uid="uid://b7c7gsdx2rkjm" path="res://Utility/basic_button.tscn" id="2_button"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.3, 0.3, 0.3, 0.9)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.572549, 0.207843, 0.168627, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 72
text = "Survivors Clone #13247"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConnectPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Label" type="Label" parent="ConnectPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 0.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 24
text = "Connect Wallet"
horizontal_alignment = 1

[node name="btn_connect_wallet" parent="ConnectPanel" instance=ExtResource("2_button")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Connect"

[node name="MainMenuPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="lbl_wallet_address" type="Label" parent="MainMenuPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = -100.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 16
text = "Wallet: Not Connected"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="btn_start_game" parent="MainMenuPanel/VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Start Game"

[node name="btn_castle" parent="MainMenuPanel/VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Castle"

[node name="btn_market" parent="MainMenuPanel/VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Market"

[node name="btn_arena" parent="MainMenuPanel/VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Arena"

[node name="btn_tavern" parent="MainMenuPanel/VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Tavern"

[node name="btn_leaderboard" parent="MainMenuPanel/VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Leaderboard"

[node name="btn_disconnect" parent="MainMenuPanel/VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Disconnect Wallet"

[node name="btn_exit" parent="MainMenuPanel/VBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -50.0
offset_right = 590.0
offset_bottom = -20.0
grow_vertical = 0

[node name="btn_start_icespear" parent="HBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Ice Spear"

[node name="btn_start_tornado" parent="HBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Tornado"

[node name="btn_start_javelin" parent="HBoxContainer" instance=ExtResource("2_button")]
layout_mode = 2
text = "Javelin"

[connection signal="click_end" from="ConnectPanel/btn_connect_wallet" to="." method="_on_btn_connect_wallet_click_end"]
[connection signal="click_end" from="MainMenuPanel/VBoxContainer/btn_start_game" to="." method="_on_btn_play_click_end"]
[connection signal="click_end" from="MainMenuPanel/VBoxContainer/btn_castle" to="." method="_on_btn_castle_click_end"]
[connection signal="click_end" from="MainMenuPanel/VBoxContainer/btn_market" to="." method="_on_btn_market_click_end"]
[connection signal="click_end" from="MainMenuPanel/VBoxContainer/btn_arena" to="." method="_on_btn_arena_click_end"]
[connection signal="click_end" from="MainMenuPanel/VBoxContainer/btn_tavern" to="." method="_on_btn_tavern_click_end"]
[connection signal="click_end" from="MainMenuPanel/VBoxContainer/btn_leaderboard" to="." method="_on_btn_leaderboard_click_end"]
[connection signal="click_end" from="MainMenuPanel/VBoxContainer/btn_disconnect" to="." method="_on_btn_disconnect_click_end"]
[connection signal="click_end" from="MainMenuPanel/VBoxContainer/btn_exit" to="." method="_on_btn_exit_click_end"]
[connection signal="click_end" from="HBoxContainer/btn_start_icespear" to="." method="_on_btn_start_icespear_click_end"]
[connection signal="click_end" from="HBoxContainer/btn_start_tornado" to="." method="_on_btn_start_tornado_click_end"]
[connection signal="click_end" from="HBoxContainer/btn_start_javelin" to="." method="_on_btn_start_javelin_click_end"]
